=================
Changes for Crate
=================

Unreleased
==========

 - Fixed NPE in the ``percentile`` aggregation fucntion. The NPE was occurring
   in case when queried shards have no records.

 - Fixed an issue with select queries returning duplicate outputs
   when `where` uses `=` with `primary key` and an order by which is
   also part of the selected fields is used.

 -  Fixed adding a column to an existing object array using `ALTER TABLE`

 - Log unhandled HTTP related exceptions as `debug` instead of `error`.

 - Fixed NPE that can occur on invalid HTTP requests.

 - Removed reduced thread stack size java option, stack size defaults
   to JVM defaults now.

 - Fix: selecting os_info['jvm']['vm_vendor'] and os_info['jvm']['name'] caused
   ColumnUnknownExceptions

 - Fixed an issue that causes outer joins to fail with an exception
   if columns are referenced in a where clause but not as select items.

 - Updated crate-admin to ``0.21.2`` which includes the following change:

     - fixed incorrect sql query for creating the tweets table in the tutorial.

 - Fixed an issue that caused right outer joins to get stuck instead of returning
   a result if the left table is empty.

 - Fixed an issue that caused left outer joins to return an empty result if the
   joined table is empty.

 - Implemented ``if`` conditional function.

 - Updated crate-admin to ``0.21.1`` which includes the following changes:

     - Fix: Corrected the sql queries to display the table list in the
     Tables view, and to create the tweets table only if it does not exist.

 - F261/F262: Implemented ``CASE`` expression support.

 - BREAKING: Removed ``schema_name`` from ``information_schema.tables``,
   ``information_schema.columns`` and ``information_schema.table_constraints``
   in favour of ``table_schema``.

 - Removed the ``client`` package which contained the deprecated ``crate-client``.
   You should start using the PostgreSQL JDBC driver instead.
